<resources>
    <string name="app_name">Pathfinding Visualizer</string>
    <string name="button_run">Run</string>
    <string name="button_reset">Reset</string>
    <string name="description_trash_can">Trash can</string>
    <string name="description_path">Path</string>
    <string name="min_matrix_rows">5</string>
    <string name="max_matrix_rows">25 rows</string>
    <string name="matrix_rows_amount_to_increase">20</string>
    <string name="group_description">Group description</string>
    <string name="alg_djikstra">Djikstra</string>
    <string name="alg_a_star">A*</string>
    <string name="alg_breadth_first">Breadth-first</string>
    <string name="alg_depth_first">Depth-first</string>
    <string name="weighted_shortest">Weighted - Shortest</string>
    <string name="unweighted">Unweighted</string>
    <string name="item_node">Node</string>
    <string name="item_edge">Edge</string>
    <string name="item_weight">Weight</string>
    <string name="about">About</string>

    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="skip">Skip</string>
    <string name="pref_previously_started">pref_previously_started</string>

    <string name="slide_header_add">Add</string>
    <string name="slide_header_connect">Connect</string>
    <string name="slide_header_weigh">Weigh</string>
    <string name="slide_wall_weigh">Wall and Weigh</string>
    <string name="slide_header_choose">Choose</string>
    <string name="slide_header_run">Run</string>

    <string name="slide_desc_drawable_add">Click on the canvas to add nodes.\nNodes can be dragged after addition</string>
    <string name="slide_desc_drawable_connect">Click on a node to select it, then click on the node you want to connect to it</string>
    <string name="slide_desc_drawable_weigh">Click on edge box to increase the weight</string>
    <string name="slide_desc_drawable_choose">Double click on node to choose it as initial or final node</string>
    <string name="slide_desc_drawable_run">After choosing initial and final nodes, \'run\' button will be enabled</string>

    <string name="slide_desc_grid_add">Click on cell to choose initial and final nodes</string>
    <string name="slide_desc_grid_wall">Add weight (first click) and walls (second click). It is possible to add more than one weight/wall per touch, just drag the finger across the canvas</string>
    <string name="slide_desc_grid_run">After choosing initial and final nodes, \'run\' button will be enabled</string>

    <string name="about_app_version">App version</string>
    <string name="about_developed_by">Developed by Paulo Fernando</string>
    <string name="drawable_graph">Drawable Graph</string>
    <string name="grid_graph">Grid Graph</string>
    <string name="how_to_use">How to use</string>

    <string name="graph_information">Graph Information</string>
    <string name="graph_information_total_of">Total</string>
    <string name="graph_information_is_not_connected">is not connected</string>
    <string name="graph_information_is_connected_to">is connected to</string>
    <string name="graph_information_visit_order">Visit order</string>
    <string name="graph_information_path">Path</string>

    <string name="node">node</string>
    <string name="nodes">nodes</string>
    <string name="copy_button">Copy</string>
    <string name="text_copied">Text copied to clipboard</string>

    <string name="delete_graph">Delete graph</string>
    <string name="confirm_delete">Are you sure you want to delete the graph?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>


</resources>
