<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/console_rounded"
    tools:context=".ui.console.ConsoleFragment">

    <TextView
        android:id="@+id/consoleTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/default_padding"
        android:text="@string/graph_information"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/consoleTitle"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/consoleRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/console_height"
            android:scrollbars="vertical"
            android:background="@color/colorConsoleTextBackground"
            android:paddingTop="30dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"/>

        <Button
            android:id="@+id/consoleCopyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_space"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/copy_button"
            android:layout_below="@id/consoleRecyclerView"
            android:contentDescription="@string/description_path"/>

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>