<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundIntro">

    <RelativeLayout
        android:id="@+id/dotsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <TextView
            android:id="@+id/dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="48sp"
            android:textColor="@color/colorDots"
            android:layout_centerInParent="true"
            android:hint="•••"/>

        <Button
            android:id="@+id/introBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textColor="@color/colorIntroButton"
            android:visibility="invisible"
            android:background="@android:color/transparent"
            android:onClick="previousPage"
            android:text="@string/back" />

        <Button
            android:id="@+id/introNextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorIntroButton"
            android:background="@android:color/transparent"
            android:onClick="nextPage"
            android:text="@string/next" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/introSkipContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/introSkipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorIntroButton"
            android:background="@android:color/transparent"
            android:onClick="closePage"
            android:text="@string/skip" />
    </RelativeLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slideViewPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/dotsLayout"
        android:layout_below="@id/introSkipContainer"/>


</RelativeLayout>